fix: updated list items to have better margin bottom by updating sass variable, feat: new Figma Prototype embed on CMC that only shows on tablet and desktop

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -32,3 +32,7 @@ $line-height-root: 1.75;
   height: 300px;
   object-fit: cover;
 }
+
+li {
+  margin-bottom: 12px;
+}
